--- a/application_info/index.html
+++ b/application_info/index.html
@@ -233,6 +233,23 @@
 
 
 
+    <div class="Grid Grid--gutters Grid--cols-3">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="copiedByClickIcon">LinkedIn</div>
+        </div>
+      </div>
+    </div>
+    <div class="Grid Grid--full">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="copied">LinkedIn</div>
+        </div>
+      </div>
+    </div>
+
+
+    
     <div class="containerCopy element">
       <div class="ClickandCopy">LinkedIn</div>
       <div class="copy-text">
@@ -241,7 +258,6 @@
         </button>
       </div>
     </div>
-
 
     <div class="blankHS"></div>
     <div class="containerCopy element">
