--- a/design_systemV2/index.html
+++ b/design_systemV2/index.html
@@ -1726,7 +1726,21 @@
 
         <div class="wrapper">
 
-          <div class="Grid Grid--gutters Grid--cols-3 Grid--center">
+          <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="element">
+                  <a> <button class="buttonDemoCode">Button</button></a>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+              </div>
+            </div>
+
+          </div>
+          <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
             <div class="Grid-cell">
               <div class="element">
                 <a> <button class="buttonLanding">Button
@@ -1738,18 +1752,14 @@
                 <a> <button class="button-35 DS">Button</button></a>
               </div>
             </div>
-            <div class="Grid-cell">
-              <div class="element">
-                <a> <button class="small">Button</button></a>
-              </div>
-            </div>
+
           </div>
 
 
           <div class="Grid Grid--gutters Grid--cols-3 Grid--center">
             <div class="Grid-cell">
               <div class="element">
-                <a href="/about"> <button class="buttonLanding arrButton">Button &nbsp;
+                <a> <button class="buttonLanding arrButton">Button &nbsp;
                   </button></a>
               </div>
             </div>
@@ -1790,6 +1800,25 @@
           </div>
           <!-- Arrow -->
           <div class="blankHXS"></div>
+          <div class="element">
+            <div class="ClipboardBoxIconOnly">
+              <button class="ClipboardIconOnly" contenteditable="true">
+                <img class="iconXS" src="../icon/in.svg" alt="LinkedIn">
+                <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
+              </button>
+            </div>
+          </div>
+          <div class="element">
+            <div class="ClipboardBoxIconOnly">
+              <button class="ClipboardIconOnly" contenteditable="true">
+                <img class="intro-logo" src="../icon/mail.svg" alt="email">
+                <p class="clickIconCopy">vickyw.design@gmail.com</p>
+              </button>
+            </div>
+          </div>
+          <a href="mailto:vickyw.design@gmail.com">
+            <img class="footer-logo" src="../icon/mail.svg" alt="email" title="Email">
+          </a>
 
           <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
             <div class="Grid-cell">
@@ -1904,7 +1933,96 @@
 
           </div>
 
+          <div class="blankHM"></div>
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="element">
+              <h2 class="tArrow">Copy to Clipboard - Icon <img class="seArrow" src="../icon/arrow-se.svg"
+                  alt="icon arrow">
+              </h2>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="blankHXS"></div>
+          <div class="element">
+            <div class="ClipboardBoxIconOnly">
+              <button class="ClipboardIconOnly" contenteditable="true">
+                <img class="iconS" src="../icon/in.svg" alt="LinkedIn">
+                <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
+              </button>
+            </div>
+          </div>
 
+          <div class="blankHM"></div>
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="element">
+              <h2 class="tArrow">Copy to Clipboard - Textbox <img class="seArrow" src="../icon/arrow-se.svg"
+                  alt="icon arrow">
+              </h2>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="blankHXS"></div>
+          <div class="containerCopy element">
+            <div class="ClickandCopy">Lorem ipsum</div>
+            <div class="copy-text">
+              <input type="text" class="text" value="https://www.vickywang.me" />
+              <button class="centerHorz"> <img class="iconXS" src="../icon/copyWt.svg" alt="LinkedIn">
+              </button>
+            </div>
+          </div>
+
+          <div class="blankHM"></div>
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="element">
+              <h2 class="tArrow">Copy to Clipboard - Paragraph <img class="seArrow" src="../icon/arrow-se.svg"
+                  alt="icon arrow">
+              </h2>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="blankHXS"></div>
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="ClipboardBox clickTxt">
+                  <button class="Clipboard clickTxt" contenteditable="true">
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                      nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                      esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt
+                      in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="blankHM"></div>
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="element">
+              <h2 class="tArrow">Copy to Clipboard - Code <img class="seArrow" src="../icon/arrow-se.svg"
+                  alt="icon arrow">
+              </h2>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="blankHXS"></div>
+          <div class="element">
+            <pre>
+              <div class="codeTiltle">Lorem ipsum</div>
+              <code>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </code>
+            </pre>
+          </div>
         </div>
       </section>
       <section id="content32">
