--- a/appointa/index.html
+++ b/appointa/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -297,19 +298,17 @@
   <div class="colorBgAPPOINTA">
     <div class="blankHS"></div>
     <!-- Arrow -->
-    <div class="wrapper">
-      <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-        <div class="Grid-cell">
-          <div class="element">
-            <div class="Grid">
-              <p class="tArrow"> APPOINTA</p>
-              <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
-            </div>
-          </div>
+    <div class="Grid Grid--full wrapper">
+      <div class="Grid-cell">
+        <div class="element">
+          <h2 class="tArrow"> APPOINTA <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+          </h2>
         </div>
       </div>
     </div>
     <!-- Arrow -->
+
+
     <div class="blankHS"></div>
     <div class="wrapper">
       <div class="flex-container">
@@ -368,21 +367,17 @@
 
   </div>
   <div class="blankHM"></div>
-
   <!-- Arrow -->
-  <div class="wrapper">
-    <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="Grid">
-            <p class="tArrow"> Timeline</p>
-            <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
-          </div>
-        </div>
+  <div class="Grid Grid--full wrapper">
+    <div class="Grid-cell">
+      <div class="element">
+        <h2 class="tArrow"> Timeline <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+        </h2>
       </div>
     </div>
   </div>
   <!-- Arrow -->
+
   <div class="blankHXS"></div>
 
   <div class="wrapper">
@@ -403,20 +398,15 @@
 
 
   <!-- Arrow -->
-  <div class="wrapper">
-    <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="Grid">
-            <p class="tArrow"> Design thinking process</p>
-            <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
-          </div>
-        </div>
+  <div class="Grid Grid--full wrapper">
+    <div class="Grid-cell">
+      <div class="element">
+        <h2 class="tArrow"> Design thinking process <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+        </h2>
       </div>
     </div>
   </div>
   <!-- Arrow -->
-
   <div class="blankHS"></div>
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
@@ -537,14 +527,18 @@
 
 
           <div class="blankHS"></div>
+
           <!-- Arrow -->
-          <div class="wrapper">
-            <div class="element">
-              <h2 class="tArrow"> User research goals <img class="seArrow" src="../../icon/arrow-se.svg" alt="icon arrow"></h2>
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow"> User research goals <img class="seArrow" src="../icon/arrow-se.svg"
+                    alt="icon arrow">
+                </h2>
+              </div>
             </div>
           </div>
           <!-- Arrow -->
-
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
@@ -656,16 +650,14 @@
           <!-- insights -->
         </section>
         <section id="insights">
+
           <!-- Arrow -->
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <p class="tArrow">Interview insights gathering</p>
-                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
-                  </div>
-                </div>
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow"> Interview insights gathering <img class="seArrow" src="../icon/arrow-se.svg"
+                    alt="icon arrow">
+                </h2>
               </div>
             </div>
           </div>
@@ -900,15 +892,17 @@
           </div>
 
         </section>
-        <!-- Arrow -->
         <section id="empathyMap">
-          <div class="wrapper">
-            <div class="element">
-              <h2 class="tArrow">Empathy map<img class="seArrow" src="../../icon/arrow-se.svg"
-                  alt="icon arrow"></h2>
+
+          <!-- Arrow -->
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow"> Empathy map <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+                </h2>
+              </div>
             </div>
           </div>
-
           <!-- Arrow -->
           <div class="blankHXS"></div>
           <div class="wrapper">
@@ -939,7 +933,7 @@
                 <div class="element">
                   <div class="Grid">
                     <p class="tArrow"> Personas</p>
-                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                    <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                   </div>
                 </div>
               </div>
@@ -969,7 +963,7 @@
                 <div class="element">
                   <div class="Grid">
                     <p class="tArrow"> Customer journey map</p>
-                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                    <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                   </div>
                 </div>
               </div>
@@ -1094,7 +1088,7 @@
                 <div class="element">
                   <div class="Grid">
                     <p class="tArrow"> Identify key pain points</p>
-                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                    <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                   </div>
                 </div>
               </div>
@@ -1132,7 +1126,7 @@
                   <div class="element">
                     <div class="Grid">
                       <p class="tArrow"> Affinity diagrams</p>
-                      <img class="se-arrow" src="../icon/arrow-se.svg" alt="arrow">
+                      <img class="seArrow" src="../icon/arrow-se.svg" alt="arrow">
                     </div>
                   </div>
                 </div>
@@ -1161,7 +1155,7 @@
                   <div class="element">
                     <div class="Grid">
                       <p class="tArrow">Early concepts</p>
-                      <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                      <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                     </div>
                   </div>
                 </div>
@@ -1334,7 +1328,7 @@
                 <div class="element">
                   <div class="Grid">
                     <p class="tArrow"> Turn Insights into Opportunities</p>
-                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                    <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                   </div>
                 </div>
               </div>
@@ -1399,7 +1393,7 @@
                 <div class="element">
                   <div class="Grid">
                     <p class="tArrow"> Priority matrix</p>
-                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="arrow">
+                    <img class="seArrow" src="../icon/arrow-se.svg" alt="arrow">
                   </div>
                 </div>
               </div>
@@ -1443,7 +1437,7 @@
                 <div class="element">
                   <div class="Grid">
                     <p class="tArrow"> Personas</p>
-                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                    <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                   </div>
                 </div>
               </div>
@@ -1522,7 +1516,7 @@
                 <div class="element">
                   <div class="Grid">
                     <p class="tArrow"> Key flows</p>
-                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                    <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                   </div>
                 </div>
               </div>
@@ -1576,7 +1570,7 @@
                 <div class="element">
                   <div class="Grid">
                     <p class="tArrow"> Site Map</p>
-                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                    <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                   </div>
                 </div>
               </div>
@@ -1603,7 +1597,7 @@
                 <div class="element">
                   <div class="Grid">
                     <p class="tArrow"> Lo-fi Sketch</p>
-                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                    <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                   </div>
                 </div>
               </div>
@@ -1646,7 +1640,7 @@
                 <div class="element">
                   <div class="Grid">
                     <p class="tArrow"> Mid-fi screen flows &#38; testing</p>
-                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                    <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                   </div>
                 </div>
               </div>
@@ -1803,7 +1797,7 @@
                 <div class="element">
                   <div class="Grid">
                     <p class="tArrow"> Mid-fi screen iteration</p>
-                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                    <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                   </div>
                 </div>
               </div>
@@ -1962,7 +1956,7 @@
                   <div class="element">
                     <div class="Grid">
                       <p class="tArrow"> Hi-fi design</p>
-                      <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                      <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                     </div>
                   </div>
                 </div>
@@ -2087,7 +2081,7 @@
                   <div class="element">
                     <div class="Grid">
                       <p class="tArrow"> Design system</p>
-                      <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                      <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                     </div>
                   </div>
                 </div>
@@ -2136,7 +2130,7 @@
                   <div class="element">
                     <div class="Grid">
                       <p class="tArrow"> UI Components</p>
-                      <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                      <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                     </div>
                   </div>
                 </div>
@@ -2238,7 +2232,7 @@
               <div class="element">
                 <div class="Grid">
                   <p class="tArrow">Outcomes</p>
-                  <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                  <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                 </div>
               </div>
             </div>
