--- a/architecture/LACAMA/index.html
+++ b/architecture/LACAMA/index.html
@@ -162,7 +162,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> Problem Cloud </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -219,7 +219,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> The Cloud </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -309,7 +309,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> COLOR & LAYERS </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -342,7 +342,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> Boxes </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -376,7 +376,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> Site and City </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -477,7 +477,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> Plans </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -578,7 +578,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> Sections and Elevations </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
