--- a/architecture/narrow_stripes/index.html
+++ b/architecture/narrow_stripes/index.html
@@ -171,7 +171,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> Programs and Diagrams </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -204,7 +204,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> Renders </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -237,7 +237,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> Site and Floor Plan </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
