--- a/architecture/recovery_of_river_edges/index.html
+++ b/architecture/recovery_of_river_edges/index.html
@@ -186,7 +186,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> On Site Research </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -217,7 +217,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> Site & Research </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -267,7 +267,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow">Photos of Sequences and Movements </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -301,7 +301,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow">Manipulation</p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -352,7 +352,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow">Project</p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
