--- a/architecture/recreation_commons/index.html
+++ b/architecture/recreation_commons/index.html
@@ -174,7 +174,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> Programs </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -217,7 +217,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> Diagrams </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -301,7 +301,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> Renders </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -362,7 +362,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> Plans and Sections </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -437,7 +437,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> Site </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
