--- a/architecture/the_rotation_of_curves/index.html
+++ b/architecture/the_rotation_of_curves/index.html
@@ -169,7 +169,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> PART 1 THE ISLAND </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -222,7 +222,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> PART 2 THE FOAM </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -302,7 +302,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> PART 3 THE HOUSE </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
