--- a/architecture/thesis_studio/index.html
+++ b/architecture/thesis_studio/index.html
@@ -248,7 +248,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> ABSTRACT </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -301,7 +301,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> Operation Method </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -343,7 +343,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> Case Study</p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -434,7 +434,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow">Results of Manipulations</p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -461,7 +461,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow">Architecture Projects</p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -536,7 +536,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow">Drawings of multiple scales</p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -631,7 +631,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow">Photo Documentation</p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
