--- a/design_systemV2/index.html
+++ b/design_systemV2/index.html
@@ -1803,7 +1803,7 @@
           <div class="element">
             <div class="ClipboardBoxIconOnly">
               <button class="ClipboardIconOnly" contenteditable="true">
-                <img class="iconXS" src="../icon/in.svg" alt="LinkedIn">
+                <img class="iconXSXXX" src="../icon/in.svg" alt="LinkedIn">
                 <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
               </button>
             </div>
@@ -1811,11 +1811,14 @@
           <div class="element">
             <div class="ClipboardBoxIconOnly">
               <button class="ClipboardIconOnly" contenteditable="true">
-                <img class="intro-logo" src="../icon/mail.svg" alt="email">
+                <img class="footer-logo" src="../icon/mail.svg" alt="LinkedIn">
                 <p class="clickIconCopy">vickyw.design@gmail.com</p>
               </button>
             </div>
           </div>
+
+
+
           <a href="mailto:vickyw.design@gmail.com">
             <img class="footer-logo" src="../icon/mail.svg" alt="email" title="Email">
           </a>
@@ -3165,9 +3168,6 @@
       <div class="footer">
         <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
         <div class="footer-right">
-          <a href="mailto:vickyw.design@gmail.com">
-            <img class="footer-logo" src="../icon/mail.svg" alt="email" title="Email">
-          </a>
           <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
             <img class="footer-logo" src="../icon/in.svg" alt="LinkedIn">
           </a>
