--- a/gardeners_hub/index.html
+++ b/gardeners_hub/index.html
@@ -157,7 +157,7 @@
   <!-- content-->
   <div class="rowVW wrapper heightM centerVer">
     <p class="tArrow"> Initial Concepts </p>
-    <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+    <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
   </div>
   <!-- content-->
   <!-- initial concepts -->
@@ -227,7 +227,7 @@
   <div class="wrapper">
     <div class="content-tl">
       <p class="tArrow"> Final Design </p>
-      <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+      <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
     </div>
   </div>
 
@@ -296,7 +296,7 @@
   <!-- content-->
   <div class="rowVW wrapper heightM centerVer ">
     <p class="tArrow"> Case Study </p>
-    <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+    <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
   </div>
   <!-- content-->
   <!--Problem and solution-->
