--- a/seer/index.html
+++ b/seer/index.html
@@ -270,7 +270,7 @@
           <div class="element">
             <div class="Grid">
               <p class="tArrow"> SEER</p>
-              <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+              <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
             </div>
           </div>
         </div>
@@ -325,7 +325,7 @@
         <div class="element">
           <div class="Grid">
             <p class="tArrow"> Timeline</p>
-            <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+            <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
           </div>
         </div>
       </div>
@@ -401,7 +401,7 @@
             <div class="element">
               <div class="Grid">
                 <p class="tArrow"> Design thinking process</p>
-                <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
               </div>
             </div>
           </div>
@@ -446,7 +446,7 @@
                   <div class="element">
                     <div class="Grid">
                       <p class="tArrow"> Research objective</p>
-                      <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                      <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                     </div>
                   </div>
                 </div>
@@ -546,7 +546,7 @@
                   <div class="element">
                     <div class="Grid">
                       <p class="tArrow"> Data from Reddit API</p>
-                      <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                      <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                     </div>
                   </div>
                 </div>
@@ -740,7 +740,7 @@
                 <div class="element">
                   <div class="Grid">
                     <p class="tArrow"> Empathy map</p>
-                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                    <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                   </div>
                 </div>
               </div>
@@ -773,7 +773,7 @@
                   <div class="element">
                     <div class="Grid">
                       <p class="tArrow">Interview insights gathering</p>
-                      <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                      <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                     </div>
                   </div>
                 </div>
@@ -931,7 +931,7 @@
                   <div class="element">
                     <div class="Grid">
                       <p class="tArrow">Persona</p>
-                      <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                      <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                     </div>
                   </div>
                 </div>
@@ -962,7 +962,7 @@
                   <div class="element">
                     <div class="Grid">
                       <p class="tArrow"> User journey</p>
-                      <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                      <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                     </div>
                   </div>
                 </div>
@@ -1015,7 +1015,7 @@
                   <div class="element">
                     <div class="Grid">
                       <p class="tArrow"> Key Solution Elements</p>
-                      <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                      <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                     </div>
                   </div>
                 </div>
@@ -1143,7 +1143,7 @@
                   <div class="element">
                     <div class="Grid">
                       <p class="tArrow"> How it works</p>
-                      <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                      <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                     </div>
                   </div>
                 </div>
@@ -1240,7 +1240,7 @@
                   <div class="element">
                     <div class="Grid">
                       <p class="tArrow"> Version 1</p>
-                      <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                      <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                     </div>
                   </div>
                 </div>
@@ -1339,7 +1339,7 @@
                   <div class="element">
                     <div class="Grid">
                       <p class="tArrow">Version 2</p>
-                      <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                      <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                     </div>
                   </div>
                 </div>
@@ -1429,7 +1429,7 @@
                 <div class="element">
                   <div class="Grid">
                     <p class="tArrow"> Version 3</p>
-                    <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                    <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                   </div>
                 </div>
               </div>
@@ -1630,7 +1630,7 @@
                   <div class="element">
                     <div class="Grid">
                       <p class="tArrow"> Metrics</p>
-                      <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                      <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                     </div>
                   </div>
                 </div>
@@ -1711,7 +1711,7 @@
                   <div class="element">
                     <div class="Grid">
                       <p class="tArrow"> Hi-fi screens</p>
-                      <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
+                      <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
                     </div>
                   </div>
                 </div>
