--- a/architecture/manifold_ground/index.html
+++ b/architecture/manifold_ground/index.html
@@ -173,7 +173,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> Methodology </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -235,7 +235,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> Site and Programs </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -266,7 +266,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> Flyover View </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
@@ -297,7 +297,7 @@
     <div class="Grid-cell">
       <div class="Grid">
         <p class="tArrow"> Site </p>
-        <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+        <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
       </div>
     </div>
   </div>
