--- a/meal_planner/index.html
+++ b/meal_planner/index.html
@@ -200,7 +200,7 @@
       <div class="Grid-cell">
         <div class="Grid">
           <p class="tArrow"> Final Product </p>
-          <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+          <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
         </div>
       </div>
     </div>
@@ -288,7 +288,7 @@
       <div class="Grid-cell">
         <div class="Grid">
           <p class="tArrow"> Features </p>
-          <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+          <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
         </div>
       </div>
     </div>
@@ -404,7 +404,7 @@
       <div class="Grid-cell">
         <div class="Grid">
           <p class="tArrow"> Final Product </p>
-          <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+          <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
         </div>
       </div>
     </div>
@@ -457,7 +457,7 @@
   <!-- content-->
   <div class="rowVW  heightM centerVer wrapper">
     <p class="tArrow"> Case Study </p>
-    <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+    <img class="seArrow" src="../../icon/arrow-se.svg" alt="se-arrow">
   </div>
   <!-- content-->
 
